fix: Overflow in section

--- a/style.css
+++ b/style.css
@@ -1,21 +1,31 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
     background: #f4f4f4;
+    padding: 2rem;
 }
 
 #header {
+    padding: 1rem;
     text-align: center;
     margin-bottom: 3rem;
 }
 
 .title {
     color: #333;
-    font-size: 2em;
+    font-size: 2rem;
+    color: #1f5fa3;
 }
 
 .header_description {
@@ -27,7 +37,7 @@
     padding: 2rem;
     border-radius: 0.5rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
-    width: 100%;
+    width: 50%;
     max-width: 600px;
     min-width: 300px;
 }
